--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,14 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
+    "paths": {
+      "icc": [
+        "dist/icc"
+      ],
+      "icc-ui": [
+        "dist/icc-ui"
+      ]
+    },
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
