--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "icc",
-  "version": "0.0.0",
+  "name": "@icc/ui",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
