--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-browser-dynamic": "^18.1.4",
     "@angular/router": "^18.1.4",
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@ngrx/effects": "^18.0.2",
+    "@ngrx/router-store": "^18.0.2",
+    "@ngrx/schematics": "^18.0.2",
+    "@ngrx/store": "^18.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -29,7 +33,9 @@
     "@angular-devkit/build-angular": "^18.1.4",
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.4",
+    "@ngrx/store-devtools": "^18.0.2",
     "@types/jasmine": "~4.3.0",
+    "angular-in-memory-web-api": "^0.18.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
