--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build icc",
+    "build:lib:scss": "scss-bundle -c ./scss-bundle.config.json",
     "watch": "ng build icc --watch --configuration development",
     "test": "ng test"
   },
