--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build icc",
     "build:lib:scss": "scss-bundle -c ./scss-bundle.config.json",
     "watch": "ng build icc --watch --configuration development",
+    "format:check": "prettier --list-different 'projects/**/*{.ts,.js,.json,.css,.scss,.html}'",
     "test": "ng test"
   },
   "private": true,
@@ -42,7 +43,9 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.2.10",
     "ng-packagr": "^18.1.0",
+    "prettier": "^3.3.3",
     "scss-bundle": "^3.1.2",
     "typescript": "~5.4.5"
   }
