--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "lint-staged": {
     "projects/**/*.ts": [
-      "prettier --write",
+      "prettier --write --print-width 120",
       "git add"
     ]
   }
