--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,3 +1,3 @@
 {
-  "projects/**/*{.ts,.js,.json,.css,.scss,.html}": ["prettier --write"]
+  "projects/**/*{.ts,.js,.json,.css,.scss,.html}": ["prettier --write --print-width 120"]
 }
