--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,12 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "cli": {
+    "cache": {
+      "enabled": false
+    },
+    "analytics": false
+  },
   "projects": {
     "icc": {
       "projectType": "library",
@@ -121,8 +127,5 @@
         }
       }
     }
-  },
-  "cli": {
-    "analytics": false
   }
 }
