--- a/angular.json
+++ b/angular.json
@@ -67,7 +67,7 @@
               "./node_modules/@fortawesome/fontawesome-free/scss/brands.scss",
               "projects/icc-demo/src/styles.scss"
             ],
-            "scripts": []
+            "scripts": ["./node_modules/d3/dist/d3.js"]
           },
           "configurations": {
             "production": {
