--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@ngrx/schematics": "^18.0.2",
     "@ngrx/store": "^18.0.2",
     "@types/d3": "^7.4.3",
+    "@types/lodash-es": "^4.17.12",
     "d3": "^7.9.0",
+    "lodash-es": "^4.17.21",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
