--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/router-store": "^18.0.2",
     "@ngrx/schematics": "^18.0.2",
     "@ngrx/store": "^18.0.2",
+    "@ngx-translate/core": "^15.0.0",
     "@types/d3": "^7.4.3",
     "@types/lodash-es": "^4.17.12",
     "d3": "^7.9.0",
