--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.0.6",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@ngrx/effects": "^19.0.0",
+    "@ngrx/operators": "^19.0.0",
     "@ngrx/router-store": "^19.0.0",
     "@ngrx/schematics": "^19.0.0",
     "@ngrx/store": "^19.0.0",
