--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build icc",
-    "build:lib:scss": "scss-bundle -c ./scss-bundle.config.json",
+    "build:lib:scss": "use sass projects/icc/theme/src/_theming.scss dist/icc/_theming.scss",
     "watch": "ng build icc --watch --configuration development",
     "format:check": "prettier --list-different 'projects/**/*{.ts,.js,.json,.css,.scss,.html}'",
     "test": "ng test",
