--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^19.1.4",
     "@angular/core": "^19.1.4",
     "@angular/forms": "^19.1.4",
+    "@angular/material": "^19.1.3",
     "@angular/platform-browser": "^19.1.4",
     "@angular/platform-browser-dynamic": "^19.1.4",
     "@angular/router": "^19.1.4",
@@ -27,7 +28,7 @@
     "@ngrx/operators": "^19.0.0",
     "@ngrx/router-store": "^19.0.0",
     "@ngrx/schematics": "^19.0.0",
-    "@ngrx/store": "^19.0.0", 
+    "@ngrx/store": "^19.0.0",
     "@ngx-translate/core": "^16.0.4",
     "@types/d3": "^7.4.3",
     "d3": "^7.9.0",
